--- a/functions/package.json
+++ b/functions/package.json
@@ -9,8 +9,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@octokit/rest": "^18.0.9",
-    "axios": "^0.21.0"
-  }
+  "dependencies": {}
 }
