--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/PaulieScanlon/gatsby-netlify-github-rest#readme",
   "dependencies": {
     "@octokit/rest": "^18.0.9",
+    "@theme-ui/color": "^0.3.5",
     "gatsby": "^2.29.3",
     "gatsby-plugin-theme-ui": "^0.3.5",
     "isomorphic-fetch": "^3.0.0",
