--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@octokit/rest": "^18.0.9",
     "@theme-ui/color": "^0.3.5",
+    "date-fns": "^2.16.1",
     "gatsby": "^2.29.3",
     "gatsby-plugin-theme-ui": "^0.3.5",
     "isomorphic-fetch": "^3.0.0",
