--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/PaulieScanlon/gatsby-netlify-github-rest#readme",
   "dependencies": {
+    "@emotion/react": "^11.1.4",
     "@octokit/rest": "^18.0.9",
     "@theme-ui/color": "^0.3.5",
     "date-fns": "^2.16.1",
